<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <com.jskhaleel.albumviewer.ui.AVTextInputLayout
            android:id="@+id/edt_user_name"
            android:layout_below="@+id/iv_app_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.jskhaleel.albumviewer.ui.AVEditText
                style="@style/LoginTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:hint="@string/user_name" />
        </com.jskhaleel.albumviewer.ui.AVTextInputLayout>

        <com.jskhaleel.albumviewer.ui.AVTextInputLayout
            android:id="@+id/edt_pincode"
            android:layout_below="@+id/edt_user_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.jskhaleel.albumviewer.ui.AVEditText
                style="@style/LoginTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/pincode" />
        </com.jskhaleel.albumviewer.ui.AVTextInputLayout>

        <com.jskhaleel.albumviewer.ui.AVButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/edt_pincode"
            android:gravity="center"
            android:textSize="@dimen/text_large"
            android:textColor="@color/white"
            android:background="@drawable/ripple_blue_button"
            android:textAllCaps="false"
            android:text="@string/login"/>

        <com.jskhaleel.albumviewer.ui.AVTextVew
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btn_login"
            android:padding="10dp"
            android:autoLink="all"
            android:visibility="gone"
            android:linksClickable="true"
            android:textColorLink="?colorPrimary"
            android:textColor="@drawable/blue_text_selector"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"/>

    </RelativeLayout>
</ScrollView>